5.4.0 -> 5.4.1:
    - proyvind: rpmfc: add classifiers for gstreamer plugins & dep generator.
    - proyvind: use pythoneggs.py for python deps generated by internal generator.
    - proyvind: rpmfc: enable ruby file classifier & internal dep generator.
    - devzero2000: misread the review, repost as the original patch
    - devzero2000: change the order for the _initddir macro assignment
    - proyvind: mandriva: add systemd macros (mdvbz#62741, from Andrey Borzenkov).
    - proyvind: dbconvert: fix conversion to older hash database format
	resulting in "missing" package from rpmdb.
    - devzero2000: add %_initddir macro for Mandriva
      (ref http://lists.mandriva.com/maintainers/2011-03/msg00252.php)
    - jbj: fix: reduce false positives checking for duplicate keys(mdvbz#62822).
    - jbj: uuid: permit --qf '%{RPMTAG:uuid}' UUIDv1/UUIDv5 output display.
    - jbj: uuid: rework for single exit return.
    - devzero2000: permit in configure phase to enable the 
      --enable-rpm-lua-extensions-based-on-rpmlib used by OpenPKG today
      and, for rpm.vercmp, by rpm.org (ref https://blueprints.launchpad.net/rpm/+spec/rpm-split-vendor-config-in-autofu)
    - jbj: add a --nofsync popt alias (caveat: experimental & risky).
    - jbj: checksig: check explictly for per-item failures after iterating.
    - proyvind: always run %clean so it won't be required in .spec file.
    - jbj: install: check explictly for per-item failures after iterating.
    - jbj: rpmgi: save per-item failures separately from iteration returns.
    - jbj: display the exit code when -vv is used.
    - devzero2000: document the actual semantic of rpm5 %exclude
    - proyvind: rubygems.rb: change dependency 'ruby >= ruby_version' to
	'ruby(abi) = ruby_version'
    - devzero2000: flip a toy test from the %exclude and check unpackaged file issue
    - proyvind: check whether provides are duplicate of package first (without